<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="112dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/trivia"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStatement"
        android:layout_width="402dp"
        android:layout_height="253dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="7dp"
        app:contentPadding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader">

        <TextView
            android:id="@+id/tvStatement"
            android:layout_width="wrap_content"
            android:layout_height="226dp"
            android:gravity="center_vertical"
            android:text="@string/tvStatement1"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/textView"
        app:layout_constraintBottom_toTopOf="@+id/cvStatement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintVertical_bias="0.754" />

    <Button
        android:id="@+id/btnTrue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:background="?android:attr/colorActivatedHighlight"
        android:text="@string/button_true"
        app:layout_constraintEnd_toStartOf="@+id/btnFalse"
        app:layout_constraintTop_toBottomOf="@+id/cvStatement" />

    <Button
        android:id="@+id/btnFalse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="100dp"
        android:background="?android:attr/colorActivatedHighlight"
        android:text="@string/button_false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvStatement" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:background="?android:attr/colorActivatedHighlight"
        android:contentDescription="next button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/btnFalse"
        app:layout_constraintTop_toBottomOf="@+id/cvStatement"
        app:srcCompat="@mipmap/baseline_navigate_next_white_18dp" />

    <ImageButton
        android:id="@+id/btnPrev"
        android:layout_width="55dp"
        android:layout_height="54dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:background="?android:attr/colorActivatedHighlight"
        android:contentDescription="previous button"
        app:layout_constraintEnd_toStartOf="@+id/btnTrue"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvStatement"
        app:srcCompat="@mipmap/baseline_arrow_back_ios_white_18dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

</androidx.constraintlayout.widget.ConstraintLayout>